--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!--comentario-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content = "esta es una pagina para aprender a hacer sitios web">
     <meta name="keywords" content="html, css, javascript">
@@ -9,6 +9,17 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <i href="">home</i>
+            <i>about</i>
+            <i>contact</i>
+            <i>blog</i>
+            
+        </nav>
+    </header>
+<main>
     
+</main>
 </body>
 </html>
