--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
         </nav>
     </header>
 <main>
-    
+    <img src="https://pbs.twimg.com/media/D5hh30nWkAA9051?format=jpg&name=large" alt="foto barcelona" >
 </main>
+<video width="400" controls >
+    <source src="assets/conejo.mp4" type="video/mp4">
+    <source src="assets/conejo.ogg" type="video/ogg">
+</video>
+<audio controls>
+    <source src="assets/horse.ogm" type="audio/ogg">
+</audio>
+<iframe name="uao" src="https://www.youtube.com/embed/x4D1L7jZ3u0?si=BIcmlXrKDWsFuCk1" frameborder="0" width="100%" height="500">
+
+</iframe>
+<a href="https://www.google.com">abrir link de google</a>
 </body>
 </html>
